--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
 	"private": true,
 	"scripts": {
 		"dev:svelte": "vite dev --host",
-		"dev": "concurrently \"cd backend && air main.go\" \"npm run dev:svelte\"",
-		"build": "vite build",
+        "dev:go": "cd backend && air",
+		"dev": "concurrently \"npm run dev:go\" \"npm run dev:svelte\"",
+		"build:svelte": "vite build",
+		"build:go": "cd backend && go build",
+		"build": "npm run build:svelte && npm run build:go",
+        "start": "concurrently \"node -r dotenv/config build\" \"cd backend && ./main\"",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
