add sidemanga panel, and adjust manga image width

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"private": true,
 	"scripts": {
 		"dev:svelte": "vite dev --host",
-        "dev:go": "cd backend && air",
+		"dev:go": "cd backend && air",
 		"dev": "concurrently \"npm run dev:go\" \"npm run dev:svelte\"",
 		"build:svelte": "vite build",
 		"build:go": "cd backend && go build",
 		"build": "npm run build:svelte && npm run build:go",
-        "start": "concurrently \"node -r dotenv/config build\" \"cd backend && ./main\"",
+		"start": "concurrently \"node -r dotenv/config build\" \"cd backend && ./main\"",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -27,6 +27,9 @@
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"flowbite": "^2.3.0",
+		"flowbite-svelte": "^0.46.1",
+		"flowbite-svelte-icons": "^1.6.1",
 		"globals": "^15.0.0",
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
