--- a/.gitignore
+++ b/.gitignore
@@ -16,20 +16,11 @@
 # production
 /build
 
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
 # local env files
 .env*.local
 
-# vercel
-.vercel
+# Backend
+backend/target
 
 # typescript
 *.tsbuildinfo
