--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 .pnp.js
 .yarn/install-state.gz
 
+.next
+
 # testing
 /coverage
 
@@ -20,7 +22,7 @@
 .env*.local
 
 # Backend
-backend/target
+target
 
 # typescript
 *.tsbuildinfo
