--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,16 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@chakra-ui/react": "^2.8.2",
-        "@emotion/react": "^11.13.0",
-        "@emotion/styled": "^11.13.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "concurrently": "^8.2.2",
-        "framer-motion": "^11.3.24",
+        "lucide-react": "^0.437.0",
         "next": "14.2.5",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "tailwind-merge": "^2.5.2",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "typescript": "^5",
