--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "dotenv -e .env -- next dev",
         "build": "next build",
-        "start": "next start",
+        "start": "dotenv -e .env -- next start",
         "lint": "next lint"
     },
     "dependencies": {
@@ -15,6 +15,7 @@
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
         "concurrently": "8.2.2",
+        "dotenv-cli": "^7.4.2",
         "lucide-react": "0.438.0",
         "next": "14.2.7",
         "react": "18.3.1",
