--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,9 @@
         "concurrently": "8.2.2",
         "dotenv-cli": "^7.4.2",
         "lucide-react": "0.438.0",
-        "next": "^15.0.0-rc.0",
-        "react": "^19.0.0-rc-a03254bc-20240905",
-        "react-dom": "^19.0.0-rc-a03254bc-20240905",
+        "next": "^14.2.8",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7"
     },
