--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
         "concurrently": "8.2.2",
+        "cookies-next": "^4.2.1",
         "dotenv-cli": "^7.4.2",
         "lucide-react": "0.438.0",
         "next": "^14.2.8",
