--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "2.1.1",
         "@radix-ui/react-slot": "1.1.0",
         "@radix-ui/react-toast": "1.2.1",
@@ -20,6 +21,7 @@
         "dotenv-cli": "^7.4.2",
         "lucide-react": "0.438.0",
         "next": "^14.2.9",
+        "next-auth": "^4.24.7",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "sharp": "^0.33.5",
