--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -32,6 +32,7 @@
     "include": [
         ".eslintrc.cjs",
         "next-env.d.ts",
+        "next-auth-extensions.d.ts",
         "**/*.ts",
         "**/*.tsx",
         "**/*.cjs",
